<package format="2">
  <name>sot-tools</name>
  <version>2.2.1</version>
  <description>Miscellanous entities for the stack of tasks </description>
  <maintainer email="ostasse@laas.fr">Olivier Stasse</maintainer>
  <license>BSDv2</license>

  <url>http://github.com/stack-of-tasks/sot-tools</url>
  <author>Mehdi Benallegue</author>
  <author>Francois Keith</author>
  <author>Florent Lamiraux</author>
  <author>Thomas Moulard</author>
  <author>Olivier Stasse</author>
  <author>Jorrit T'Hooft</author>

  <build_depend>roscpp</build_depend>
  <build_depend>sot-core</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sot-core</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <doc_depend>doxygen</doc_depend>

</package>
